# aptx_translator

./: .gitignore  README.md
crates/: Cargo.toml
crates/aptx_translator/: Cargo.toml
crates/translation_api/: Cargo.toml
src/: Cargo.toml  rustfmt.toml
src/aptx_translator/: Cargo.toml
src/aptx_translator/src/: main.rs
src/crates/translation_api/: Cargo.toml
src/crates/translation_api/src/: error.rs  language.rs  lib.rs
src/crates/translation_api/src/api/: baidu.rs  mod.rs  youdao.rs
