[package]
name = "aptx_translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
translation_api = { path = "../crates/translation_api" }
clap = { version = "4.4.8", features = ["derive"] }
ctrlc = "3.4.1"
sysexits = "0.7.5"
toml = "0.8.8"
